--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,93 @@
         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
 		 http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
         version="4.0">
-  <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-    <servlet-name>ControllerServlet</servlet-name>
-    <servlet-class>com.senin.demo.controller.ControllerServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ControllerServlet</servlet-name>
-    <url-pattern>/controller</url-pattern>
-  </servlet-mapping>
+    <display-name>Archetype Created Web Application</display-name>
+    <servlet>
+        <servlet-name>ControllerServlet</servlet-name>
+        <servlet-class>com.senin.demo.controller.ControllerServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ControllerServlet</servlet-name>
+        <url-pattern>/controller</url-pattern>
+    </servlet-mapping>
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>com.senin.demo.filter.EncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <servlet-name>ControllerServlet</servlet-name>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>SessionLocaleFilter</filter-name>
+        <filter-class>com.senin.demo.filter.SessionLocaleFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>SessionLocaleFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <servlet-name>ControllerServlet</servlet-name>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>CommandAccessFilter</filter-name>
+        <filter-class>com.senin.demo.filter.CommandAccessFilter</filter-class>
+        <init-param>
+            <param-name>admin</param-name>
+            <param-value>adminWorkspace showRequestsListOfFaculty checkRequestFromFacultyReqList createNewFacultyForm
+                createNewFaculty editFacultyForm updateFaculty deleteFaculty changeAdmissionRequestStatus
+                blockUnblockFacultyRegistration getStatementOfFaculty finalizeStatementForFaculty candidatesList
+                editCandidate deleteCandidate editCandidateForm
+            </param-value>
+        </init-param>
+        <init-param>
+            <param-name>user</param-name>
+            <param-value>facultiesList submitRequest getSubmitRequestForm deleteAdmissionRequest</param-value>
+        </init-param>
+        <init-param>
+            <param-name>common</param-name>
+            <param-value>logout noCommand viewSettings updateSettings candidateProfile candidateProfileEdit
+                updateCandidateProfile getCandidateRequestsList
+            </param-value>
+        </init-param>
+        <init-param>
+            <param-name>out-of-control</param-name>
+            <param-value>login loginForm registrationForm registration</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>CommandAccessFilter</filter-name>
+        <servlet-name>ControllerServlet</servlet-name>
+    </filter-mapping>
+
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/WEB-INF/jsp/errorPage.jsp</location>
+    </error-page>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/jsp/errorPage.jsp</location>
+    </error-page>
+
+    <listener>
+        <listener-class>com.senin.demo.listener.SessionListener</listener-class>
+    </listener>
+
+    <session-config>
+        <session-timeout>15</session-timeout>
+    </session-config>
 
 </web-app>
